--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <head>
-    <!-- <script src="main.js"></script> -->
-    <script src="popup.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/popup.js"></script>
+    <script src="scripts/main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,21 +15,11 @@
 
 <body id="body">
     <div id="container">
-
-
         <h1>WORD CHANGER!</h1>
         <div id="inputs">
-
             <input type="text" id="inputBefore" name="inputBefore" value="Change This">
-
             <input type="text" id="inputAfter" name="inputAfter" value="To This.">
         </div>
-
         <button id="submitButton">CHAOS!</button>
     </div>
-
-
-
-
-
 </body>
